--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'RC'
 - !lcsh 'Medicine -- Practice'
+- GITenberg
 title: "A System of Practical Medicine by American Authors, Vol. I\r\nPathology and\
   \ General Diseases"
 url: http://www.gutenberg.org/ebooks/39157
